# ShortHand_Compiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup_build_infra.sh
.github/workflows/: ci.yml
Compiler_new_ws/: Short.pptx
Compiler_new_ws/.metadata/: version.ini
Compiler_new_ws/.metadata/.plugins/org.eclipse.cdt.core/: Short_Hand.language.settings.xml
Compiler_new_ws/.metadata/.plugins/org.eclipse.cdt.dsf.ui/: dialog_settings.xml
Compiler_new_ws/.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
Compiler_new_ws/.metadata/.plugins/org.eclipse.compare/: dialog_settings.xml
Compiler_new_ws/.metadata/.plugins/org.eclipse.core.resources/.projects/Short_Hand/: .markers
Compiler_new_ws/.metadata/.plugins/org.eclipse.core.resources/.root/: 10.tree
Compiler_new_ws/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
Compiler_new_ws/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources  org.eclipse.papyrus.infra.emf.7
Compiler_new_ws/.metadata/.plugins/org.eclipse.debug.core/.launches/: Short_Hand Build (GNU).launch  Short_Hand Short_Hand.launch
Compiler_new_ws/.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
Compiler_new_ws/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Compiler_new_ws/.metadata/.plugins/org.eclipse.epp.mpc.ui/: dialog_settings.xml
Compiler_new_ws/.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
Compiler_new_ws/.metadata/.plugins/org.eclipse.ltk.ui.refactoring/: dialog_settings.xml
Compiler_new_ws/.metadata/.plugins/org.eclipse.m2e.core/nexus/05b0fe8524860bd73cbb07ef30fb34cc/: segments_b
Compiler_new_ws/.metadata/.plugins/org.eclipse.m2e.core/nexus/6bdb811b0164fe371030c0e17cfa786c/: _a.cfs  segments_b
Compiler_new_ws/.metadata/.plugins/org.eclipse.m2e.core/nexus/830bc118332e77292949ed1e6d2fabe0/: segments_b
Compiler_new_ws/.metadata/.plugins/org.eclipse.pde.core/.cache/: clean-cache.properties
Compiler_new_ws/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
Compiler_new_ws/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
Compiler_new_ws/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
Compiler_new_ws/.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
Compiler_new_ws/.metadata/.plugins/org.python.pydev.shared_ui/: dialog_settings.xml
Compiler_new_ws/.metadata/.plugins/org.python.pydev/pyunit_tests/: test_run_0.xml
Compiler_new_ws/.metadata/.plugins/org.python.pydev/v1_5y9sn6c2mdu4m5b0isbprz5jd/: modulesKeys
Compiler_new_ws/Short_Hand/: .cproject  .project  bytecode_file.bc  codegen_interpret.sh  flex_output.txt  ir_file.ir
Compiler_new_ws/Short_Hand/examples/: 13_basic_operation.short  ai_infer.short  ai_library_abstraction.short  ai_train.short  all_features.short  binary_search.short  bubble_sort.short  expr.short  green_ai_compiled_pipeline.short  greenai_report.short  if_else.short  loop.short  loop_2.short
Compiler_new_ws/Short_Hand/short_programmes/: 1.short  Alph.short  Demo.short  alphahist.short  combinationsof1.short  insertionsort.short  matmul.short  matsum.short  mergesort.short  primecheck.short  pythagoreantriplets.short  radixsort.short  sumlessN.short
Compiler_new_ws/Short_Hand/src/: Makefile  ai_app.cpp  ai_train.cpp  lex.yy.c  main.cpp  parser.output  parser.tab.cc  parser.tab.hh
Compiler_new_ws/Short_Hand/src/ai_runtime/: AI_Backend.cpp  AI_Backend.h  AI_Evidence.h  AI_Runtime.cpp  AI_Runtime.h  AI_Types.cpp  AI_Types.h  TorchTrainer.cpp  TorchTrainer.h
Compiler_new_ws/Short_Hand/src/ai_runtime/backends/: FallbackBackend.cpp  FallbackBackend.h  LibTorchBackend.cpp  LibTorchBackend.h  LlamaCppBackend.cpp  LlamaCppBackend.h  OnnxRuntimeBackend.cpp  OnnxRuntimeBackend.h  OpenVINOBackend.cpp  OpenVINOBackend.h  TensorRTBackend.cpp  TensorRTBackend.h
Compiler_new_ws/Short_Hand/src/ast/: AST.cpp  AST.h
Compiler_new_ws/Short_Hand/src/evidence/: EvidenceEmitter.cpp  EvidenceEmitter.h
Compiler_new_ws/Short_Hand/src/green_ai/: C3ECOGate.cpp  GreenAITool.cpp
Compiler_new_ws/Short_Hand/src/scanner_parser/: parser.yy  scanner.ll
Compiler_new_ws/Short_Hand/src/util/: util.h
Compiler_new_ws/Short_Hand/src/visitors/: AST_Printer.cpp  AST_Printer.h  Diagnostics.cpp  Diagnostics.h  IR_Generator.cpp  IR_Generator.h  Interpreter.cpp  Interpreter.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  Symbol_Table.h
benchmarks/baselines/: arithmetic.cpp  onnx_runtime_stub.cpp
benchmarks/short/: arithmetic.short  array.short  function_call.short  greenai.short  loop.short
deprecated/python_tools/: README.md  green_ai_tool.py
docs/: architecture.md  c3eco_conformance_matrix.md  compiler_pipeline.md  evaluation_plan.md  green_ai_certification.md  known_limitations.md  language_spec.md  paper_plan.md  production_green_ai_architecture.md  public_release_readiness.md  reproducibility.md  semantics.md  toolchain_policy.md
examples/green_ai/: c3eco_ai_certification_candidate.greenai  compiled_ai_infer_sidecar.greenai  image_classification.greenai  llm_rag.greenai  model_routing.greenai  training_pipeline.greenai
results/: README.md
scripts/: bootstrap_framework.sh  collect_energy.sh  green-check  green-report  production_readiness_gate.sh  run_benchmarks.sh  smoke_test.sh  validate_language.sh  verify_env.sh
tests/: run_language_tests.sh  test_green_ai_tool.py
tests/ai_runtime/: backend_format_validation.short  test_fallback.sh
tests/evidence/: README.md  test_ai_evidence.sh
tests/green_ai/: test_c3eco_gate.sh  test_green_ai_tool.sh
tests/parser/invalid/: malformed_model.short
tests/parser/valid/: functions.short  greenai_full.short
tests/semantic/invalid/: incompatible_backend.short  incompatible_backend_no_fallback.short  missing_model_guardrail.short  missing_model_quality_guardrail.short  missing_quality.short  unknown_model_infer.short  unknown_tensor_infer.short
tools/: green_ai_tool.py
(+48 files in other folders)
